# task-cli

./: CMakeLists.txt  README.md  test.sh
src/: jsonManager.cpp  jsonManager.h  main.cpp  taskManager.cpp  taskManager.h  taskOperations.cpp  taskUtilities.cpp  taskUtilities.h
src/json/: jsonManager.cpp  jsonManager.h
src/tasks/: taskManager.cpp  taskManager.h  taskOperations.cpp
src/types/tasks/: task.h
src/utils/tasks/: taskUtilities.cpp  taskUtilities.h
